--- a/here clone/Base.lproj/Main.storyboard
+++ b/here clone/Base.lproj/Main.storyboard
@@ -119,7 +119,25 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="NgI-RI-IF8" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="641" y="1024"/>
+            <point key="canvasLocation" x="635" y="1030"/>
+        </scene>
+        <!--Sign In View Controller-->
+        <scene sceneID="gzI-Bq-QVT">
+            <objects>
+                <viewController id="df6-qV-alL" customClass="HERESignInViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="6QZ-zJ-exS"/>
+                        <viewControllerLayoutGuide type="bottom" id="CVe-X4-4um"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="nOy-VF-UcN">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="FeS-tg-5R0" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="635" y="-1098"/>
         </scene>
         <!--Navigation View Controller-->
         <scene sceneID="4Ls-r5-3nZ">
@@ -136,6 +154,7 @@
                         <segue destination="RWW-T4-Ocw" kind="show" identifier="toBeaconsTableViewControllerSegue" id="p1S-Hu-z4z"/>
                         <segue destination="xVX-TB-MuZ" kind="show" identifier="toStatusViewControllerSegue" id="59y-0e-7Sx"/>
                         <segue destination="IUn-Gp-h4L" kind="show" identifier="toCreateUserViewControllerSegue" id="xol-tb-a7i"/>
+                        <segue destination="df6-qV-alL" kind="show" identifier="toSignInViewControllerSegue" id="RoC-hz-jaM"/>
                     </connections>
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ar5-fJ-Iph" userLabel="First Responder" sceneMemberID="firstResponder"/>
