--- a/here clone/Base.lproj/Main.storyboard
+++ b/here clone/Base.lproj/Main.storyboard
@@ -138,13 +138,6 @@
                         <rect key="frame" x="0.0" y="64" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="anonymous_user.png" translatesAutoresizingMaskIntoConstraints="NO" id="B0W-XO-jQc">
-                                <rect key="frame" x="216" y="144" width="167" height="195"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="167" id="G5K-HS-cyh"/>
-                                    <constraint firstAttribute="height" constant="195" id="aWF-xD-gDO"/>
-                                </constraints>
-                            </imageView>
                             <button opaque="NO" contentMode="scaleAspectFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fSW-Lm-KWg">
                                 <rect key="frame" x="28" y="494" width="544" height="86"/>
                                 <constraints>
@@ -159,15 +152,31 @@
                                     <action selector="recordMessageButtonPressed:" destination="6xc-lR-L0r" eventType="touchUpInside" id="mHk-hh-tRl"/>
                                 </connections>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jef-9o-2ZP">
+                                <rect key="frame" x="200" y="144" width="200" height="200"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="200" id="7Yc-WM-wky"/>
+                                    <constraint firstAttribute="width" constant="200" id="jql-Ef-9IB"/>
+                                </constraints>
+                                <state key="normal" image="anonymous_user.png">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstAttribute="centerX" secondItem="B0W-XO-jQc" secondAttribute="centerX" id="EKQ-m4-kFd"/>
-                            <constraint firstItem="B0W-XO-jQc" firstAttribute="top" secondItem="xRm-Sh-Hvi" secondAttribute="bottom" constant="80" id="R2N-J0-m1n"/>
+                            <constraint firstAttribute="centerX" secondItem="jef-9o-2ZP" secondAttribute="centerX" id="7hs-xL-yJZ"/>
                             <constraint firstAttribute="trailingMargin" secondItem="fSW-Lm-KWg" secondAttribute="trailing" constant="12" id="ZRK-QZ-r2P"/>
+                            <constraint firstAttribute="centerY" secondItem="jef-9o-2ZP" secondAttribute="centerY" id="Zsr-ku-RfS"/>
                             <constraint firstItem="yDG-ru-pM3" firstAttribute="top" secondItem="fSW-Lm-KWg" secondAttribute="bottom" constant="20" id="bq3-qF-Y8G"/>
+                            <constraint firstItem="jef-9o-2ZP" firstAttribute="top" secondItem="xRm-Sh-Hvi" secondAttribute="bottom" constant="80" id="gMZ-00-E41"/>
                             <constraint firstItem="fSW-Lm-KWg" firstAttribute="leading" secondItem="cT1-dH-4In" secondAttribute="leadingMargin" constant="12" id="xB0-IT-ZVa"/>
                         </constraints>
+                        <variation key="default">
+                            <mask key="constraints">
+                                <exclude reference="Zsr-ku-RfS"/>
+                            </mask>
+                        </variation>
                     </view>
                     <navigationItem key="navigationItem" id="NK7-wH-hRY">
                         <barButtonItem key="leftBarButtonItem" image="menu.png" id="6NL-jU-9z8">
@@ -195,7 +204,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" image="anonymous_user.png" translatesAutoresizingMaskIntoConstraints="NO" id="HJC-dA-KQY">
-                                <rect key="frame" x="216" y="80" width="167" height="195"/>
+                                <rect key="frame" x="216" y="145" width="167" height="195"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="195" id="E50-HE-opn"/>
                                     <constraint firstAttribute="width" constant="167" id="bao-aP-hAU"/>
@@ -216,7 +225,7 @@
                                 </state>
                             </button>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="USERNAME" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="HJ6-EC-jAu">
-                                <rect key="frame" x="36" y="295" width="528" height="30"/>
+                                <rect key="frame" x="36" y="360" width="528" height="30"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                                 <variation key="widthClass=compact" ambiguous="YES">
@@ -224,7 +233,7 @@
                                 </variation>
                             </textField>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="PASSWORD" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="BA9-TX-Aru">
-                                <rect key="frame" x="36" y="345" width="528" height="30"/>
+                                <rect key="frame" x="36" y="410" width="528" height="30"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                                 <variation key="widthClass=compact" ambiguous="YES">
@@ -246,7 +255,6 @@
                             <constraint firstItem="HJ6-EC-jAu" firstAttribute="leading" secondItem="R9r-BI-O6I" secondAttribute="leadingMargin" constant="20" id="do0-E1-aVx"/>
                             <constraint firstAttribute="centerX" secondItem="HJC-dA-KQY" secondAttribute="centerX" id="hxC-lc-a4D"/>
                             <constraint firstItem="HJ6-EC-jAu" firstAttribute="top" secondItem="HJC-dA-KQY" secondAttribute="bottom" constant="20" id="j8C-cR-ND9"/>
-                            <constraint firstItem="HJC-dA-KQY" firstAttribute="top" relation="lessThanOrEqual" secondItem="R9r-BI-O6I" secondAttribute="topMargin" constant="80" id="rxV-uS-TFa"/>
                             <constraint firstItem="rzA-ZL-iZz" firstAttribute="top" relation="greaterThanOrEqual" secondItem="BA9-TX-Aru" secondAttribute="bottom" constant="10" id="tba-b3-yjs"/>
                         </constraints>
                     </view>
